update readme wrt enable preview
fix, as much as possible, the same in the pom configuration