@@ -5,6 +5,15 @@ See [user-manual](./user-manual.pdf) in this directory for details.
 ## License
 Licensed under AGPL V 3.0
 
+### Important! Requires _--enable-preview_
+Prime Mover now requires the [Virtual Thread preview feature from Project Loom](https://openjdk.org/jeps/425).  Unfortunately, this means that the Maven plugin for Prime Mover ultimately
+requires _--enable-preview_ to be used to run the plugin.  As the Prime Mover plugin is run during normal build processing
+to test the plugin, this poses a problem of how to configure this correctly in Maven.  The answer is, of course, you **cannot** - lol.
+
+Consequently, you _must_ have _"--enable-preview"_ in your [_MAVEN_OPTS_](https://maven.apache.org/configure.html).
+
+Much apologies for this inconvienence.  This requirement will be eliminated soon with Java 21, as Project Loom is no longer preview, but a released feature of Java 21.
+
 ## Building
 Requires Java 20 and Maven 3.83+
 
@@ -43,6 +52,9 @@ provide the scanning mechanism to obtain the classes to transform.S
 
 The plugin required to transform simulation code.  This plugin runs after compilation for either main or test classes and will perform the simulation
 transform on classes in the target output directory, overwriting these class files with the transformed class.
+
+Note that because of the requirement for _--enable-preview_ you might run into interesting issues with the plugin unable to run using the Maven M2E feature.  If so, make sure
+that maven is configured to use the workspace configuration JVM and that is also configured to enable previews as a default option.
 
      <plugin>
          <groupId>com.hellblazer.primeMover</groupId>
